Favicon + Overflow fix 4

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
 #wrapper {
 	position: relative;
 	overflow-x: hidden;
+	overflow: hidden;
 }
 .center-box {
 	width: 80%;
